--- a/Frontend/src/Component/Post.css
+++ b/Frontend/src/Component/Post.css
@@ -1,6 +1,7 @@
 #user-post{
     min-width: 250px;
     width: 37%;
+    width: 70%;
     margin: 0 auto;
     padding: 10px;
     border-radius: 10px;
